# alloy

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  barrier_comparison.xlsx  demo.cpp
cmake/: AlloyInstall.cmake
demo/: CMakeLists.txt  FetchDXC.cmake  demo.cpp  imguiTest.cpp  renderTargetTest.cpp  textureTest.cpp  uniformBufferTest.cpp
demo/app/: App.cpp  App.hpp  HLSLCompiler.cpp  HLSLCompiler.hpp  ImGuiBackend.cpp  ImGuiBackend.hpp
demo/dxc/: CMakeLists.txt
demo/dxc/include/: WinAdapter.h
docs/: auto_resource_usage_tracking.md  backend_error_handling.md  road_to_bindless.md
examples/: CMakeLists.txt
examples/AppBase/: AppRunner.cpp  AppRunner.hpp  CMakeLists.txt
examples/AppBase/Utility/: BumpAllocator.cpp  BumpAllocator.hpp  GPUCapture.cpp  GPUCapture.hpp  ImGuiAlloyBackend.cpp  ImGuiAlloyBackend.hpp
examples/AppBase/Utility/ImGuiShaders/: COMPILE.md  ImGuiAlloyBackend.hlsl  ImGuiAlloyBackend_ps.h  ImGuiAlloyBackend_vs.h
examples/AppBase/include/: HLSLCompiler.hpp  IApp.hpp  RuntimeServices.hpp
examples/BindlessT1/: BindlessT1.cpp  BindlessT1.hlsl  CMakeLists.txt
examples/BindlessT2/: BindlessT2.cpp  BindlessT2.hlsl  CMakeLists.txt
examples/HLSLCompiler/: CMakeLists.txt  HLSLCompiler.cpp
examples/PBRRenderer/: Allocators.hpp  CMakeLists.txt  MeshBuilder.cpp  MeshBuilder.hpp  MeshRenderer.cpp  MeshRenderer.hpp  PBRRendererApp.cpp  PBRRendererApp.hpp  Scene.cpp  Scene.hpp  main.cpp
examples/PBRRenderer/Shaders/: PBRObjectShader.hlsl
examples/SimpleMeshShader/: CMakeLists.txt  QuadMeshShader.hlsl  SimpleMeshShader.cpp
examples/SimpleQuad/: CMakeLists.txt  QuadShader.hlsl  SimpleQuad.cpp
examples/cmake/: CompileHLSL.cmake  FetchDXC.cmake  FetchWinPix.cmake
include/alloy/: BindableResource.hpp  Buffer.hpp  CommandList.hpp  CommandQueue.hpp  Context.hpp  DescriptorHeap.hpp  ExecuteIndirect.hpp  FixedFunctions.hpp  FrameBuffer.hpp  GraphicsDevice.hpp  Helpers.hpp  Pipeline.hpp  RenderPass.hpp  ResourceBarrier.hpp  ResourceFactory.hpp  Sampler.hpp  Shader.hpp  SwapChain.hpp  SwapChainSources.hpp  SyncObjects.hpp  Texture.hpp  Types.hpp  Workgraph.hpp  alloy.hpp
include/alloy/backend/: Backends.hpp
include/alloy/common/: BitFlags.hpp  Common.hpp  Macros.h  RefCnt.hpp  Singleton.hpp  Waitable.hpp  WeakRefCnt.hpp
include/alloy/layers/AutoResourceUsageTracking/: ITrackingCommandList.hpp  ITrackingDevice.hpp
include/veldrid/: BindableResource.hpp  Buffer.hpp  CommandList.hpp  CommandQueue.hpp  DeviceResource.hpp  Fence.hpp  FixedFunctions.hpp  Framebuffer.hpp  GraphicsDevice.hpp  Helpers.hpp  Pipeline.hpp  ResourceBarrier.hpp  ResourceFactory.hpp  Sampler.hpp  Shader.hpp  SwapChain.hpp  SwapChainSources.hpp  SyncObjects.hpp  Texture.hpp  Types.hpp
include/veldrid/backend/: Backends.hpp
include/veldrid/common/: BitFlags.hpp  Common.hpp  Macros.h  RefCnt.hpp  Singleton.hpp
src/: Backends.cpp  BindableResource.cpp  Context.cpp  DeviceResource.cpp  GraphicsDevice.cpp  Helpers.cpp  Shader.cpp
src/backend/dx12/: CMakeLists.txt  D3DBarrierCompatibility.cpp  D3DBarrierCompatibility.hpp  D3DCommon.hpp  D3DDescriptorHeapMgr.cpp  D3DDescriptorHeapMgr.hpp  D3DPipelineStateStream.hpp  D3DPixEventEncoder.cpp  D3DPixEventEncoder.hpp  D3DTypeCvt.cpp  D3DTypeCvt.hpp  DXCBindableResource.cpp  DXCBindableResource.hpp  DXCCommandList.cpp  DXCCommandList.hpp  DXCContext.cpp  DXCContext.hpp  DXCDevice.cpp  DXCDevice.hpp  DXCExecuteIndirect.cpp  DXCExecuteIndirect.hpp  DXCFrameBuffer.cpp  DXCFrameBuffer.hpp  DXCPipeline.cpp  DXCPipeline.hpp  DXCResourceBarrier.cpp  DXCResourceBarrier.hpp  DXCResourceFactory.cpp  DXCResourceFactory.hpp  DXCResourceHeap.cpp  DXCResourceHeap.hpp  DXCShader.cpp  DXCShader.hpp  DXCSwapChain.cpp  DXCSwapChain.hpp  DXCTexture.cpp  DXCTexture.hpp  readme.md
src/backend/mtl/: CMakeLists.txt  MetalBindableResource.h  MetalBindableResource.mm  MetalCommandList.h  MetalCommandList.mm  MetalDescriptorHeap.hpp  MetalDescriptorHeap.mm  MetalDevice.h  MetalDevice.hpp  MetalDevice.mm  MetalFrameBuffer.h  MetalFrameBuffer.mm  MetalPipeline.h  MetalPipeline.mm  MetalResourceFactory.h  MetalResourceFactory.mm  MetalShader.h  MetalShader.mm  MetalSwapChain.cpp  MetalSwapChain.h  MetalSwapChain.hpp  MetalSwapChain.mm  MetalTexture.cpp  MetalTexture.h  MetalTexture.hpp  MetalTexture.mm  MtlShaderCvtImpl.m  MtlSurfaceUtil.h  MtlSurfaceUtil.hpp  MtlSurfaceUtil.mm  MtlTypeCvt.h  MtlTypeCvt.mm  MtlUtilShaderLib.h  MtlUtilShaderLib.mm
src/backend/mtl/commands/: MtlCmd.hpp
src/backend/mtl/shaders/: Bin2Hex.cmake  CMakeLists.txt  ExecuteIndirectArgGen.metal  MSAAResolve.metal
src/backend/vk/: CMakeLists.txt  Device.cpp  Device.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VkCommon.cpp  VkCommon.hpp  VkDescriptorAllocator.cpp  VkDescriptorAllocator.hpp  VkDescriptorPoolMgr.cpp  VkDescriptorPoolMgr.hpp  VkDescriptors.cpp  VkDescriptors.hpp  VkPhyDev.cpp  VkPhyDev.hpp  VkPipeline.cpp  VkPipeline.hpp  VkStructStream.hpp  VkSurfaceUtil.cpp  VkSurfaceUtil.hpp  VkTypeCvt.cpp  VkTypeCvt.hpp  VulkanBindableResource.cpp  VulkanBindableResource.hpp  VulkanCommandList.cpp  VulkanCommandList.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDescriptorHeap.cpp  VulkanDescriptorHeap.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFramebuffer.cpp  VulkanFramebuffer.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  (+11 more)
src/common/: Waitable.cpp
src/layers/AutoResourceUsageTracking/: TrackedResource.cpp  TrackedResource.hpp  TrackingCommandList.cpp  TrackingCommandList.hpp  TrackingDevice.cpp  TrackingDevice.hpp  TrackingResourceFactory.cpp  TrackingResourceFactory.hpp  TrackingTimeline.cpp  TrackingTimeline.hpp
src/utils/: Allocators.cpp  Allocators.hpp  PoolMgr.cpp  PoolMgr.hpp  ResourceStateTracker.cpp  ResourceStateTracker.hpp
